--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <nav>
+      <h1>OdinBook</h1>
+      <% if current_user %>
+        <div class="nav-links">
+          <%= link_to "Profile", user_path(current_user.id) %>
+          <p>Notifications placeholder</p>
+          <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+        </div>
+      <% end %>
+    </nav>
     <%= yield %>
   </body>
 </html>
