--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,3 @@
 <h1>Users#index page</h1>
 
-<% if current_user %> 
-  <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
-<% else %>
-  <%= link_to_unless_current "Sign in", new_user_session_path %>
-  <%= link_to_unless_current "Sign up", new_user_registration_path %>
-<% end %>
+<p>Will show all the people that can be sent friend requests.</p>
