--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,8 @@
   </div>
 </div>
 <div class="user-show content">
-  <%= render 'posts/post', posts: @posts %>
+  <%= turbo_frame_tag id='new_post', src: new_post_path %>
+  <div id='posts'>
+    <%= render @posts %>
+  </div>
 </div>
