--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag id='new_post' do %>
   <div class="post-form">
-    <%= form_with model: @post do |form| %>
+    <%= form_with model: @post, data: { controller: 'reset-form', action: 'turbo:submit-end->reset-form#reset' } do |form| %>
       <%= form.label :content, 'Content', class: 'hidden' %>
       <%= form.text_area :content %>
       <%= form.submit "Post"%>
