--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,5 @@
 <div class="post-container">
-  <%# Email will be replaced by Profile name %>
-  <p><%= post.user.email %></p>
-  <%# DateTime will be formatted to show time in current user's timezone %>
+  <p><%= post.user.profile.name %></p>
   <p><%= post.created_at%></p>
   <h3><%= post.content %></h3>
 </div>
