--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,18 @@
-<div class="user-show sidebar">
-  <div class="profile">
-    Placeholder for profile information.
+<div class="user-show">
+  <div class="sidebar">
+    <div class="profile">
+      <h2><%= @profile.name %></h2>
+      <p>Location: <%= @profile.location %></p>
+      <p>Birthday: <%= @profile.formatted_birthday %></p>
+    </div>
+    <div class="friends">
+      Placeholder for friends list.
+    </div>
   </div>
-  <div class="friends">
-    Placeholder for friends list.
-  </div>
-</div>
-<div class="user-show content">
-  <%= turbo_frame_tag id='new_post', src: new_post_path %>
-  <div id='posts'>
-    <%= render @posts %>
+  <div class="content">
+    <%= turbo_frame_tag id='new_post', src: new_post_path %>
+    <div id='posts'>
+      <%= render @posts %>
+    </div>
   </div>
 </div>
