--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
 
   <body>
     <nav>
-      <h1>OdinBook</h1>
+      <h1><%= link_to 'OdinBook', root_path %></h1>
       <% if current_user %>
         <div class="nav-links">
-          <%= link_to "Profile", user_path(current_user.id) %>
+          <%= link_to current_user.profile.name, user_path(current_user.id) %>
           <p>Notifications placeholder</p>
           <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
         </div>
