--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Users#index page</h1>
+<h1>Find New Friends</h1>
 
-<p>Will show all the people that can be sent friend requests.</p>
+<div id='users'>
+  <%= render @potential_friends %>
+</div>
