Build notifications to accept or decline friend requests in navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,11 @@ nav {
   gap: 20px;
 }
 
+.notifications {
+  display: flex;
+  flex-direction: column;
+}
+
 /* POSTS */
 .post-container {
   border: 1px solid black;
