--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,7 @@
   </head>
 
   <body>
-    <nav>
-      <h1><%= link_to 'OdinBook', root_path %></h1>
-      <% if current_user %>
-        <div class="nav-links">
-          <%= link_to 'Find New Friends', users_path %>
-          <%= link_to current_user.profile.name, user_path(current_user.id) %>
-          <p>Notifications placeholder</p>
-          <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
-        </div>
-      <% end %>
-    </nav>
+    <%= render "shared/navbar" %>
     <%= yield %>
   </body>
 </html>
