--- a/app/views/shared/_notifications.html.erb
+++ b/app/views/shared/_notifications.html.erb
@@ -1,20 +1,26 @@
 <div class="notifications">
-  <% if current_user.pending_friend_requests.any? %>
-    <p>Friend Requests</p>
-    <% current_user.pending_friend_requests.each do |request| %>
-      <%= link_to request.sent_by.profile.name, user_path(request.sent_by.id) %>
-      <%= button_to 'Accept',
-        friend_request_path(request.id),
-        params: { 'friend_request[status]': 'accepted' },
-        method: :patch
-      %>
-      <%= button_to 'Decline',
-        friend_request_path(request.id),
-        params: { 'friend_request[status]': 'declined' },
-        method: :patch
-      %>
-    <% end %>
-  <% else %>
-    <p>No Notifications</p>
-  <% end %>
+  <div data-controller="dropdown" class="relative">
+  <button type="button" data-action="dropdown#toggle click@window->dropdown#hide">Notifications</button>
+
+  <div data-dropdown-target="menu">
+    <div data-action="dropdown#toggle">
+      <% if current_user.pending_friend_requests.any? %>
+        <p>Friend Requests</p>
+          <% current_user.pending_friend_requests.each do |request| %>
+            <%= link_to request.sent_by.profile.name, user_path(request.sent_by.id) %>
+            <%= button_to 'Accept',
+              friend_request_path(request.id),
+              params: { 'friend_request[status]': 'accepted' },
+              method: :patch
+            %>
+            <%= button_to 'Decline',
+              friend_request_path(request.id),
+              params: { 'friend_request[status]': 'declined' },
+              method: :patch
+            %>
+          <% end %>
+       <% end %>
+      </div>
+    </div>
+  </div>
 </div>
