Add Active Storage for Profile pictures

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,3 +60,11 @@ nav {
   display: grid;
   grid-template-columns: 180px 1fr;
 }
+
+.user-container img {
+  width: 100px;
+}
+
+.profile img {
+  width: 150px;
+}
