--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,10 @@
 
     <%= profile_form.label :birthday, 'Birthday' %>
     <%= profile_form.date_field :birthday %>
+    
+    <%= profile_form.label :picture, 'Add your profile picture *' %>
+    <%= profile_form.file_field :picture %>
+    <p>* Picture must be in a square format or else picture will be cropped</p>
   <% end %>
 
   <div class="actions">
