--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<div class="posts-index content">
-  <%= turbo_frame_tag id='new_post', src: new_post_path %>
-  <div id='posts'>
+<div class="posts-index">
+  <%= turbo_frame_tag id="new_post", src: new_post_path %>
+  <div id="posts">
     <%= render @posts %>
   </div>
 </div>
