--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,14 @@
-<%= turbo_frame_tag id='new_post' do %>
+<%= turbo_frame_tag id="new_post" do %>
   <div class="post-form">
-    <%= form_with model: @post, data: { controller: 'reset-form', action: 'turbo:submit-end->reset-form#reset' } do |form| %>
-      <%= form.label :content, 'Content', class: 'hidden' %>
+    <%= form_with model: @post, data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" } do |form| %>
+      <%= form.label :content, "Content", class: "hidden" %>
       <%= form.text_area :content %>
       <%= form.submit "Post"%>
     <% end %>
     
     <% if @post.errors.any? %>
       <% @post.errors.full_messages.each do |message| %>
-        <div class='error-msg'><%= message %></div>
+        <div class="error-msg"><%= message %></div>
       <% end %>
     <% end %>
   </div>
