--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,10 @@
 <nav>
-  <h1><%= link_to 'OdinBook', root_path %></h1>
+  <h1><%= link_to "OdinBook", root_path %></h1>
+  
   <% if current_user %>
     <div class="nav-links">
-      <%= link_to 'Find New Friends', users_path %>
-      <%= link_to 'My Profile', user_path(current_user.id) %>
+      <%= link_to "Find New Friends", users_path %>
+      <%= link_to "My Profile", user_path(current_user.id) %>
       <%= render "shared/notifications" %>
       <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
     </div>
