--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,22 +15,22 @@
     </div>
 
     <% if current_user == @user %>
-      <%= link_to 'Edit my profile', edit_profile_path(current_user.profile.id) %>
+      <%= link_to "Edit my profile", edit_profile_path(current_user.profile.id) %>
     <% end %>
   </div>
   
   <div class="content">
     <% if current_user == @user %>
-      <%= turbo_frame_tag id='new_post', src: new_post_path %>
-      <div id='posts'>
+      <%= turbo_frame_tag id="new_post", src: new_post_path %>
+      <div id="posts">
         <%= render @posts %>
       </div>
     <% elsif current_user.friends.include?(@user) %>
-      <div id='posts'>
+      <div id="posts">
         <%= render @posts %>
       </div>
     <% else %>
-      <p>Only <%= @profile.name %>'s friends can see their posts.</p>
+      <p>Only <%= @profile.name %>"s friends can see their posts.</p>
     <% end %>
    </div>
 </div>
