--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,4 +2,16 @@
   <p><%= post.user.profile.name %></p>
   <p><%= post.created_at%></p>
   <h3><%= post.content %></h3>
+
+  <% if post.user != current_user %>
+    <%= button_to "Like",
+        likes_path,
+        params: { "like[post_id]": post.id, "like[user_id]": current_user.id },
+        method: :post
+    %>
+  <% end %>
+
+  <% if post.liked_by.any? %>
+    <%= pluralize(post.liked_by.count, "Like") %>
+  <% end %>
 </div>
