--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,12 +7,14 @@
       <p>Birthday: <%= @profile.formatted_birthday %></p>
     </div>
 
-    <div class="friends">
-      <h4>Friends</h4>
-      <% @user.friends.each do |friend| %>
-        <%= image_tag friend.profile.picture_attachment_path %>
-      <% end %>
-    </div>
+    <% if current_user == @user || current_user.friends.include?(@user) %>
+      <div class="friends">
+        <h4>Friends</h4>
+        <% @user.friends.each do |friend| %>
+          <%= image_tag friend.profile.picture_attachment_path %>
+        <% end %>
+      </div>
+    <% end %>
 
     <% if current_user == @user %>
       <%= link_to "Edit my profile", edit_profile_path(current_user.profile.id) %>
@@ -30,7 +32,7 @@
         <%= render @posts %>
       </div>
     <% else %>
-      <p>Only <%= @profile.name %>"s friends can see their posts.</p>
+      <p>Only <%= @profile.name %>'s friends can see their posts.</p>
     <% end %>
    </div>
 </div>
