Add new comment Turbo Frame to pages with Posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="post-container">
+<div class="post-container" id="<%= dom_id(post) %>">
   <%= link_to post.user.profile.name, post.user %>
   <%= post.formatted_datetime%>
   <h3><%= post.content %></h3>
@@ -8,4 +8,6 @@
   <% post.comments.sorted_by_date.each do |comment| %>
     <%= render partial: "comments/comment", locals: {comment: comment} %>
   <% end %>
+
+  <%= turbo_frame_tag id="new_comment", src: new_comment_path %>
 </div>
