--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="comment-container">
+<div class="comment-container" id="<%= dom_id(comment) %>">
   <%= link_to comment.user.profile.name, comment.user %>
   <%= comment.formatted_datetime %>
   <h4><%= comment.content %></h4>
