--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,15 @@
-<div class="posts-index">
-  <%= turbo_frame_tag id="new_post", src: new_post_path %>
-  <div id="posts">
-    <%= render @posts %>
+<main class="container">
+  <div class="header">
+    <h1>Posts</h1>
+
+    <%= link_to "New post",
+                new_post_path,
+                data: { turbo_frame: dom_id(Post.new) } %>
+
+    <%= turbo_frame_tag Post.new %>
   </div>
-</div>
+  
+  <%= turbo_frame_tag "posts" do %>
+    <%= render @posts %>
+  <% end %>
+</main>
