Add existing comments and new form to Users#index using Turbo

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,6 @@ nav {
   margin-bottom: 5px;
 }
 
-
 /* USERS */
 .user-show {
   display: grid;
@@ -82,7 +81,7 @@ nav {
 }
 
 /* COMMENTS */
-.comment-container {
+.comment {
   border: 1px solid blue;
   margin: 5px;
 }
