--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,16 +1,23 @@
 <%= turbo_frame_tag post do %>
   <div class="post">
     <div class="post__header">
-      <div class="post__author">
-        <%= link_to post.user.profile.name, post.user %>
-      </div>
-      <div class="post_date">
-        <%= post.formatted_datetime %>
-      </div>
+        <%= render "shared/author_date", author: post.user, date: post.created_at %>
     </div>
     
     <div class="post__body">
       <%= post.content %>
+    </div>
+
+    <div class="post__footer">
+      <%= turbo_frame_tag nested_dom_id(post, "comments") do %>
+        <%= render post.comments, post: post %>
+      <% end%>
+
+      <%= turbo_frame_tag nested_dom_id(post, Comment.new) %>
+
+      <%= link_to "Add a comment",
+                  [:new, post, :comment],
+                  data: { turbo_frame: nested_dom_id(post, Comment.new) } %>
     </div>
   </div>
 <% end%>
