--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,9 +9,13 @@
     </div>
 
     <div class="post__footer">
+      <%= turbo_frame_tag nested_dom_id(post, "likes") do %>
+        <%= render partial: "likes/like", locals: { post: post } %>
+      <% end %>
+
       <%= turbo_frame_tag nested_dom_id(post, "comments") do %>
         <%= render post.comments, post: post %>
-      <% end%>
+      <% end %>
 
       <%= turbo_frame_tag nested_dom_id(post, Comment.new) %>
 
