--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,16 +1,22 @@
-<div class="user-container">
-  <%= image_tag user.profile.picture_attachment_path %>
-  <%= link_to user.profile.name, user %>
+<%= turbo_frame_tag user do %>
+  <div class="user">
+    <div class="user__info">
+      <%= image_tag user.profile.picture_attachment_path %>
+      <%= link_to user.profile.name, user %>
+    </div>
 
-  <% if current_user.friends.include?(user) %>
-    <p>Friends</p>
-  <% elsif current_user.requested_friends.include?(user) || current_user.declined_friends.include?(user) %>
-    <p>Request Sent</p>
-  <% else %>
-    <%= button_to "Send Friend Request",
-      friend_requests_path,
-      params: { "friend_request[sent_by_id]": current_user.id, "friend_request[sent_to_id]": user.id },
-      method: :post
-    %>
-  <% end %>
-</div>
+    <div class="user__friend-status">
+      <% if current_user.friends.include?(user) %>
+        <p>Friends</p>
+      <% elsif current_user.requested_friends.include?(user) || current_user.declined_friends.include?(user) %>
+        <p>Request Sent</p>
+      <% else %>
+        <%= button_to "Send Friend Request",
+          friend_requests_path,
+          params: { "friend_request[sent_by_id]": current_user.id, "friend_request[sent_to_id]": user.id },
+          method: :post
+        %>
+      <% end %>
+    </div>
+  </div>
+<% end %>
