--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Find New Friends</h1>
-
-<div id="users">
-  <%= render @users %>
-</div>
+<main class="container">
+  <div class="header">
+    <h1>Find New Friends</h1>
+  </div>
+  
+  <%= turbo_frame_tag "users" do %>
+    <%= render @users %>
+  <% end %>
+</main>
