--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,38 +1,43 @@
-<div class="user-show">
+<main class="container user-show">
   <div class="sidebar">
-    <div class="profile">
+    <div class="sidebar__profile">
       <%= image_tag @profile.picture_attachment_path %>
       <h2><%= @profile.name %></h2>
       <p>Location: <%= @profile.location %></p>
       <p>Birthday: <%= @profile.formatted_birthday %></p>
+
+      <% if current_user == @user %>
+        <%= link_to "Edit my profile", edit_profile_path(current_user.profile.id) %>
+      <% end %>
     </div>
 
+    <div class="sidebar__friends">
     <% if current_user == @user || current_user.friends.include?(@user) %>
-      <div class="friends">
         <h4>Friends</h4>
         <% @user.friends.each do |friend| %>
-          <%= image_tag friend.profile.picture_attachment_path %>
+          <%= link_to image_tag(friend.profile.picture_attachment_path), friend %>
         <% end %>
-      </div>
-    <% end %>
-
-    <% if current_user == @user %>
-      <%= link_to "Edit my profile", edit_profile_path(current_user.profile.id) %>
-    <% end %>
+      <% end %>
+    </div>
   </div>
   
-  <div class="content">
+  <div class="user__posts">
     <% if current_user == @user %>
-      <%= turbo_frame_tag id="new_post", src: new_post_path %>
-      <div id="posts">
+      <%= link_to "New post",
+              new_post_path,
+              data: { turbo_frame: dom_id(Post.new) } %>
+
+      <%= turbo_frame_tag Post.new %>
+
+      <%= turbo_frame_tag "posts" do %>
         <%= render @posts %>
-      </div>
+      <% end %>
     <% elsif current_user.friends.include?(@user) %>
-      <div id="posts">
+      <%= turbo_frame_tag "posts" do %>
         <%= render @posts %>
-      </div>
+      <% end %>
     <% else %>
       <p>Only <%= @profile.name %>'s friends can see their posts.</p>
     <% end %>
    </div>
-</div>
+</main>
