Refactor Profile#edit and controller

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,7 +33,7 @@
     
     <%= profile_form.label :picture, "Add your profile picture *" %>
     <%= profile_form.file_field :picture %>
-    <p>* Picture must be in a square format or else picture will be cropped</p>
+    <p>* Picture must be in a square format or else it will be cropped</p>
   <% end %>
 
   <div class="actions">
