--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,6 +3,6 @@
 
   <%= form.label :content, "Content", class: "hidden" %>
   <%= form.text_area :content %>
-  <%= link_to "Cancel", posts_path %>
-  <%= form.submit "Comment"%>
+  <%= link_to "Cancel", posts_path, class: "btn btn--light" %>
+  <%= form.submit "Comment", class: "btn btn--secondary" %>
 <% end %>
