--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,8 @@
 
     <%= link_to "New post",
                 new_post_path,
-                data: { turbo_frame: dom_id(Post.new) } %>
+                data: { turbo_frame: dom_id(Post.new) },
+                class: "btn btn--primary" %>
 
     <%= turbo_frame_tag Post.new %>
   </div>
