--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,10 +3,17 @@
   
   <% if current_user %>
     <div class="nav-links">
-      <%= link_to "Find New Friends", users_path %>
-      <%= link_to "My Profile", user_path(current_user.id) %>
+      <%= link_to "Find New Friends",
+                  users_path,
+                  class: "btn btn--light" %>
+      <%= link_to "My Profile",
+                  user_path(current_user.id),
+                  class: "btn btn--light" %>
       <%= render "shared/notifications" %>
-      <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+      <%= link_to "Sign out",
+                  destroy_user_session_path,
+                  data: { turbo_method: :delete },
+                  class: "btn btn--dark" %>
     </div>
   <% end %>
 </nav>
