--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -14,8 +14,8 @@
         <%= button_to "Send Friend Request",
           friend_requests_path,
           params: { "friend_request[sent_by_id]": current_user.id, "friend_request[sent_to_id]": user.id },
-          method: :post
-        %>
+          method: :post,
+          class: "btn btn--primary" %>
       <% end %>
     </div>
   </div>
