--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,9 @@
       <p>Birthday: <%= @profile.formatted_birthday %></p>
 
       <% if current_user == @user %>
-        <%= link_to "Edit my profile", edit_profile_path(current_user.profile.id) %>
+        <%= link_to "Edit my profile",
+                    edit_profile_path(current_user.profile.id),
+                    class: "btn btn--light" %>
       <% end %>
     </div>
 
@@ -25,7 +27,8 @@
     <% if current_user == @user %>
       <%= link_to "New post",
               new_post_path,
-              data: { turbo_frame: dom_id(Post.new) } %>
+              data: { turbo_frame: dom_id(Post.new) },
+              class: "btn btn--primary" %>
 
       <%= turbo_frame_tag Post.new %>
 
