--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -4,3 +4,9 @@
 
 // Components
 @import "components/btn";
+@import "components/navbar";
+@import "components/notifications";
+
+// Layouts
+@import "layouts/container";
+@import "layouts/header";
