--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,21 @@
-<nav>
-  <h1><%= link_to "OdinBook", root_path %></h1>
+<header class="navbar">
+  <%= link_to "OdinBook",
+              root_path,
+              class: "navbar__home" %>
   
   <% if current_user %>
-    <div class="nav-links">
+    <div class="navbar__links">
+      <%= render "shared/notifications" %>
       <%= link_to "Find New Friends",
                   users_path,
                   class: "btn btn--light" %>
       <%= link_to "My Profile",
                   user_path(current_user.id),
                   class: "btn btn--light" %>
-      <%= render "shared/notifications" %>
       <%= link_to "Sign out",
                   destroy_user_session_path,
                   data: { turbo_method: :delete },
                   class: "btn btn--dark" %>
     </div>
   <% end %>
-</nav>
+</header>
