--- a/app/assets/stylesheets/components/_notifications.scss
+++ b/app/assets/stylesheets/components/_notifications.scss
@@ -6,11 +6,9 @@
   &--parent {
     position: relative;
     list-style: none;
-    display: block;
   }
 
   &--children {
-    display: none;
     position: absolute;
     top: 140%;
     overflow: auto;
@@ -19,17 +17,24 @@
     background-color: (var(--color-white));
     border-radius: var(--border-radius);
 
-    li{
+    li {
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
       align-items: center;
       gap: var(--space-xs);
-      margin-top: var(--space-xs);
+    }
+
+    h4 {
+      margin-bottom: var(--space-xs);
     }
   }
 
-  &:hover ul {
-    display: block;
+  &--hidden {
+    display: none;
+  }
+  
+  &--none {
+    width: max-content;
   }
 }
