Style Like component

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -6,6 +6,8 @@
 @import "components/btn";
 @import "components/navbar";
 @import "components/notifications";
+@import "components/like";
+@import "components/hidden";
 
 // Layouts
 @import "layouts/container";
