--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -2,16 +2,17 @@
   <div class="like__btn">
     <% if current_user.liked_posts.include?(post) %>
       <% like_id = current_user.likes.select { |likes| likes.post_id == post.id } %>
-      <%= button_to "Like",
+      <%= button_to "Liked",
           like_path(like_id),
           method: :delete,
-          class: "liked"
+          class: "btn btn--secondary btn--small"
       %>
     <% elsif post.user != current_user %>
       <%= button_to "Like",
           likes_path,
           params: { "like[post_id]": post.id, "like[user_id]": current_user.id },
-          method: :post
+          method: :post,
+          class: "btn btn--light btn--small"
       %>
     <% end %>
   </div>
