Style Comment component

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -8,6 +8,7 @@
 @import "components/notifications";
 @import "components/like";
 @import "components/hidden";
+@import "components/comment";
 
 // Layouts
 @import "layouts/container";
