Style Post#index page

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -9,6 +9,9 @@
 @import "components/like";
 @import "components/hidden";
 @import "components/comment";
+@import "components/post";
+@import "components/post_comment_meta";
+
 
 // Layouts
 @import "layouts/container";
