--- a/app/assets/stylesheets/components/_post.scss
+++ b/app/assets/stylesheets/components/_post.scss
@@ -1,11 +1,10 @@
-.comment {
+.post {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   gap: var(--space-xs);
   border-radius: var(--border-radius);
   background-color: var(--color-white);
-  border: var(--border);
+  box-shadow: var(--shadow-small);
   margin: var(--space-xs) 0;
   padding: var(--space-xs);
 
